tweaks to fix navbar visability on mobile devices

--- a/css/theme.css
+++ b/css/theme.css
@@ -454,6 +454,7 @@ h6 {
     border-bottom: 1px solid rgba(255,255,255,.3);
     text-transform: uppercase;
     background: #fff;
+    z-index: 1;
 }
 
 .navbar-custom .navbar-brand {
